# biblio-tts-server-piper

./: .dockerignore  .gitignore  README.md  Specification.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.py
docker/: Dockerfile  nginx.conf  stack.yaml
src/biblio_tts_server_piper/: __init__.py  __main__.py  app.py  config.py  models.py
src/biblio_tts_server_piper/routers/: __init__.py  tts.py  voices.py
src/biblio_tts_server_piper/services/: __init__.py  audio.py  piper_tts.py
src/biblio_tts_server_piper/static/: index.html
